--- a/views/set_macros.erb
+++ b/views/set_macros.erb
@@ -2,21 +2,19 @@
 
 <br/>
 
-<form action='/bet' method='post'>
+<form action='/display_macros' method='post'>
 	<div class="input-prepend input-append">
   	<span class="add-on">(P)rotein</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='protein_macros'/>
   	<span class="add-on">(g)rams</span>
  </div>
  <br/>
- <form action='/bet' method='post'>
 	<div class="input-prepend input-append">
   	<span class="add-on">(C)arbs</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='carb_macros'/>
   	<span class="add-on">(g)rams</span>
  </div>
  <br/>
- <form action='/bet' method='post'>
 	<div class="input-prepend input-append">
   	<span class="add-on">(F)ats</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='fat_macros'/>
