--- a/views/set_macros.erb
+++ b/views/set_macros.erb
@@ -2,25 +2,25 @@
 
 <br/>
 
-<form action='/display_macros' method='post'>
-	<div class="input-prepend input-append">
+<form action='/set_macros' method='post'>
+  <div class="input-prepend input-append">
   	<span class="add-on">(P)rotein</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='protein_macros'/>
   	<span class="add-on">(g)rams</span>
- </div>
- <br/>
-	<div class="input-prepend input-append">
+  </div>
+  <br/>
+  <div class="input-prepend input-append">
   	<span class="add-on">(C)arbs</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='carb_macros'/>
   	<span class="add-on">(g)rams</span>
- </div>
- <br/>
+  </div>
+  <br/>
 	<div class="input-prepend input-append">
   	<span class="add-on">(F)ats</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='fat_macros'/>
   	<span class="add-on">(g)rams</span>
- </div>
- <br/>
- <br/>
- <input type='submit' class='btn'/>
+  </div>
+  <br/>
+  <br/>
+  <input type='submit' class='btn'/>
 </form>
