--- a/views/set_username.erb
+++ b/views/set_username.erb
@@ -1,6 +1,6 @@
 <h4>Set Profile Name</h4>
 
-<form action='/username' method='post'>
+<form action='/set_username' method='post'>
  Name: <input type='text' name='username'/>
  <br/>
  <input type='submit' class='btn'/>
