--- a/views/set_macros.erb
+++ b/views/set_macros.erb
@@ -6,19 +6,19 @@
   <div class="input-prepend input-append">
   	<span class="add-on">(P)rotein</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='protein_macros'/>
-  	<span class="add-on">(g)rams</span>
+  	<span class="add-on">(g)</span>
   </div>
   <br/>
   <div class="input-prepend input-append">
   	<span class="add-on">(C)arbs</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='carb_macros'/>
-  	<span class="add-on">(g)rams</span>
+  	<span class="add-on">(g)</span>
   </div>
   <br/>
 	<div class="input-prepend input-append">
   	<span class="add-on">(F)ats</span>
   	<input class="span2" id="appendedPrependedInput" type="text" name='fat_macros'/>
-  	<span class="add-on">(g)rams</span>
+  	<span class="add-on">(g)</span>
   </div>
   <br/>
   <br/>
